@@ -166,10 +166,21 @@ switch($action)
 			if(isset($CONFIG['receipts']['show_documents_warning']) && chkconfig($CONFIG['receipts']['show_documents_warning']))
 				if($DB->GetOne('SELECT COUNT(*) FROM documents WHERE customerid = ? AND closed = 0 AND type < 0', array($receipt['customerid'])))
 				{
-					if($CONFIG['receipts']['documents_warning'])
+					if(!empty($CONFIG['receipts']['documents_warning']))
 						$customer['docwarning'] = $CONFIG['receipts']['documents_warning'];
 					else
 						$customer['docwarning'] = trans('Customer has got unconfirmed documents!');
+				}
+
+			// jesli klient posiada zablokowane komputery poinformujmy
+			// o tym kasjera, moze po wplacie trzeba bedzie zmienic ich status
+			if(isset($CONFIG['receipts']['show_nodes_warning']) && chkconfig($CONFIG['receipts']['show_nodes_warning']))
+				if($DB->GetOne('SELECT COUNT(*) FROM nodes WHERE ownerid = ? AND access = 0', array($receipt['customerid'])))
+				{
+					if(!empty($CONFIG['receipts']['nodes_warning']))
+						$customer['nodeswarning'] = $CONFIG['receipts']['nodes_warning'];
+					else
+						$customer['nodeswarning'] = trans('Customer has got disconnected nodes!');
 				}
 		}
 	break;
@@ -453,6 +464,17 @@ switch($action)
 								$customer['docwarning'] = trans('Customer has got unconfirmed documents!');
 						}
 					
+					// jesli klient posiada zablokowane komputery poinformujmy
+	    				// o tym kasjera, moze po wplacie trzeba bedzie zmienic ich status
+					if(isset($CONFIG['receipts']['show_nodes_warning']) && chkconfig($CONFIG['receipts']['show_nodes_warning']))
+						if($DB->GetOne('SELECT COUNT(*) FROM nodes WHERE ownerid = ? AND access = 0', array($cid)))
+						{
+							if(!empty($CONFIG['receipts']['nodes_warning']))
+								$customer['nodeswarning'] = $CONFIG['receipts']['nodes_warning'];
+							else
+								$customer['nodeswarning'] = trans('Customer has got disconnected nodes!');
+						}
+
 					// remove positions if customer was changed
 					if($oldcid != $customer['id'])
 						unset($contents);
