@@ -192,6 +192,19 @@
 	</TR>
 </TABLE>
 {/if}
+{if $customer.nodeswarning}
+<BR>
+<TABLE WIDTH="100%" CELLPADDING="3">
+	<TR CLASS="dark">
+		<TD CLASS="fleftu" width="1%" nowrap>
+			<IMG SRC="img/node.gif" ALT=""> <B>{t}Nodes:{/t}</B>
+		</TD>
+		<TD CLASS="frightu">
+		        <FONT class="red">{$customer.nodeswarning}</FONT>
+		</TD>
+	</TR>
+</TABLE>
+{/if}
 </P>
 {/if}
 <P>
